# Python-OrbitLab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
devel/: 90_Quiz.ipynb  planet.py  pymunk.ipynb  rename_to_lowercase.sh
docs/: diagrams.ipynb  objectives.md  style_guide.md
lessons/: 20_Stage_2.ipynb  readme.md  stage3.py  stage3_extended.py
lessons/.jtl/: syllabus-completion.json  syllabus.yaml
lessons/0_Preview/: 10_orbit_lab.ipynb  20_stage1.py
lessons/10_Introduction/: 10_Orbit_Lab.ipynb  README.md
lessons/10_Physics_for_Games/: 01_move.py  02_no_acceleration.py
lessons/10_introduction/: 10_orbit_lab.ipynb  readme.md
lessons/20_Physics_for_Games/: 10_Physics_for_Games.ipynb  40_acceleration.py  60_gravity_bounce.py  README.md
lessons/20_physics_for_games/: 10_physics_for_games.ipynb  20_move.py  30_move.py  30_no_acceleration.py  40_acceleration.py  40_no_acceleration.py  50_acceleration_body.py  60_gravity.py  60_gravity_bounce.py  70_gravity.py  70_gravity_bounce.py  80_gravity_bounce.py
lessons/25_vectors/: 10_vectors.ipynb  20_vector_example.py  30_vector_rotations.py  40_using_vectors.ipynb  60_gravity_bounce_vec.py  vector20.py
lessons/30_FirstOrbits/: 10_stage1.py  20_Stage_2.ipynb  50_gravity.py  README.md
lessons/30_firstorbits/: 00_first_orbits.ipynb
lessons/30_vectors/: 10_vectors.ipynb  20_vector_example.py  30_vector_rotations.py  (+4 more)
lib/orbitlib/: README.md  pyproject.toml
lib/orbitlib/src/orbitlib/: colors.py  data.py  motion_diagram.py  vector20.py
(+27 files in other folders)
